ccor.h renamed to ccoroutine.h

--- a/src/cmdenv/Makefile.in
+++ b/src/cmdenv/Makefile.in
@@ -76,7 +76,7 @@ cmdenv.o: cmdenv.cc \
   ../../include/errmsg.h \
   ../../include/cmsgheap.h \
   ../../include/coutvect.h \
-  ../../include/ccor.h \
+  ../../include/ccoroutine.h \
   ../../include/carray.h \
   ../../include/cenvir.h \
   ../envir/envdefs.h \
