--- a/src/tkenv/Makefile.in
+++ b/src/tkenv/Makefile.in
@@ -119,7 +119,7 @@ inspect.o: inspect.cc \
   ../../include/cpacket.h \
   ../../include/cmsgheap.h \
   ../../include/cstk.h \
-  ../../include/ccor.h \
+  ../../include/ccoroutine.h \
   ../../include/cmodule.h \
   ../../include/cstat.h \
   ../../include/cdensity.h \
@@ -151,7 +151,7 @@ modinsp.o: modinsp.cc \
   tkinsp.h \
   arrow.h \
   ../../include/cobject.h \
-  ../../include/ccor.h \
+  ../../include/ccoroutine.h \
   ../../include/chead.h \
   ../../include/cqueue.h \
   ../../include/cgate.h \
@@ -188,7 +188,7 @@ objinsp.o: objinsp.cc \
   ../../include/cpacket.h \
   ../../include/cmsgheap.h \
   ../../include/cstk.h \
-  ../../include/ccor.h \
+  ../../include/ccoroutine.h \
   ../../include/cmodule.h \
   ../../include/cstat.h \
   ../../include/cdensity.h \
@@ -220,7 +220,7 @@ statinsp.o: statinsp.cc \
   tkinsp.h \
   arrow.h \
   ../../include/cobject.h \
-  ../../include/ccor.h \
+  ../../include/ccoroutine.h \
   ../../include/chead.h \
   ../../include/cqueue.h \
   ../../include/cgate.h \
@@ -255,7 +255,7 @@ tkapp.o: tkapp.cc \
   ../../include/util.h \
   ../envir/envdefs.h \
   ../../include/cpar.h \
-  ../../include/ccor.h \
+  ../../include/ccoroutine.h \
   ../../include/carray.h \
   ../../include/cqueue.h \
   ../../include/cgate.h \
@@ -282,7 +282,7 @@ tkcmd.o: tkcmd.cc \
   ../../include/chead.h \
   ../../include/cmsgheap.h \
   ../../include/coutvect.h \
-  ../../include/ccor.h \
+  ../../include/ccoroutine.h \
   ../../include/cqueue.h \
   ../../include/cgate.h \
   ../envir/omnetapp.h \
@@ -298,7 +298,7 @@ tklib.o: tklib.cc \
   ../envir/patmatch.h \
   ../../include/defs.h \
   ../../include/util.h \
-  ../../include/ccor.h \
+  ../../include/ccoroutine.h \
   ../../include/chead.h \
   ../../include/carray.h \
   ../../include/cqueue.h \
